syntax = "proto3";

package userPackage;

message ServerStreamUserResponse {
    string id = 1;
    string firstName = 2;
    string lastName = 3;
    string gender = 4;
    string race = 5;
    string position = 6;
    string startDate = 7;
    string shiftPreference = 8;
    string branchName = 9;
    string region = 10;
    string country = 11;
    string phoneNumber = 12;
    string email = 13;
    int32 version = 14;
    string signInType = 15;
    string providerId = 16;
    string userRole = 17;
    string registeredEmployee = 18;
}

message GrpcUser {
    string id = 1;
    string firstName = 2;
    string lastName = 3;
    string gender = 4;
    string race = 5;
    string position = 6;
    string startDate = 7;
    string shiftPreference = 8;
    string branchName = 9;
    string region = 10;
    string country = 11;
    string phoneNumber = 12;
    string email = 13;
    int32 version = 14;
    string signInType = 15;
    string providerId = 16;
    string password = 17;
    string userRole = 18;
    string registeredEmployee = 19;
}

message AllGrpcUsers {
    string serviceName = 1;
}

message GoogleGrpcUser {
    string sub = 1;
    string name = 2;
    string given_name = 3;
    string family_name = 4;
    string picture= 5;
    string email = 6;
    string email_verified = 7;
    string locale = 8;
}

message GitHubGrpcUser{
    string login = 1;
    int32 id = 2;
    string node_id = 3;
    string avatar_url = 4;
    string gravatar_id = 5;
    string url = 6;
    string html_url = 7;
    string followers_url = 8;
    string following_url = 9;
    string gists_url = 10;
    string starred_url = 11;
    string subscriptions_url = 12;
    string organizations_url = 13;
    string repos_url = 14;
    string events_url = 15;
    string received_events_url = 16;
    string type = 17;
    bool site_admin = 18;
    string name = 19;
    string company = 20;
    string blog = 21;
    string location = 22;
    string email = 23;
    bool hireable = 24;
    string bio = 25;
    string twitter_username = 26;
    int32 public_repos = 27;
    int32 public_gists = 28;
    int32 followers = 29;
    int32 following = 30;
    string created_at= 31;
    string updated_at= 32;
}

message LocalGrpcUser{
    string email = 1;
    string password = 2;
}

message GrpcResponsePayload{
    int32 status = 1;
    string jwt = 2;
    GrpcUser data = 3;
}

service UserService {
    rpc GetAllUsers(AllGrpcUsers) returns (stream ServerStreamUserResponse) {};
    rpc LoginGoogleUser(GoogleGrpcUser) returns (GrpcResponsePayload) {};
    rpc LoginGitHubUser(GitHubGrpcUser) returns (GrpcResponsePayload) {};
    rpc LoginLocalUser(LocalGrpcUser) returns (GrpcResponsePayload) {};
}
